--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="error_invalid_password">Mot de passe trop court</string>
     <string name="error_incorrect_password">Email ou mot de passe incorrect</string>
     <string name="error_field_required">Ce champ est requis</string>
+    <string name="pick_configuration">Choisissez une configuration</string>
+    <string name="loading_text">Chargement des configurations...</string>
+    <string name="loading_failed">Echec de chargement : %1$s</string>
 </resources>
