--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="pick_configuration">Choisissez une configuration</string>
     <string name="loading_text">Chargement des configurations...</string>
     <string name="loading_failed">Echec de chargement : %1$s</string>
+    <string name="requires_login">Connexion nécessaire.</string>
 </resources>
