Getting closer from the desired pipeline, with the cash payment modal implementation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,13 @@
     <string name="loading_failed">Echec de chargement : %1$s</string>
     <string name="requires_login">Connexion nécessaire.</string>
     <string name="cart_name">Panier</string>
+    <string name="logged_in_to_ji">Connecté au shop JapanImpact</string>
+    <string name="logout">Déconnexion</string>
+    <string name="setup_sumup">Paramétrage boitier</string>
+    <string name="login">Connexion</string>
+    <string name="given_money">Argent reçu</string>
+    <string name="change_help_title">Aide au retour de monnaie</string>
+    <string name="accept_cash_payment">Paiement Validé</string>
+    <string name="refuse_cash_payment">Abandon Paiement</string>
+    <string name="cash_payment_title">Paiement cash : %1$d .-</string>
 </resources>
